k8s/infra/network/gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.27.27.220
      # io.cilium/lb-mode: dsr
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.beans.lan"
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-cert
      allowedRoutes:
        namespaces:
          from: All
