k8s/infra/network/gateway/gateway-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.27.27.221
      io.cilium/lb-mode: dsr
  listeners:
    - protocol: TLS
      port: 443
      name: proxmox
      hostname: "pve1.beans.lan"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
